[gd_scene load_steps=5 format=3 uid="uid://bfi6d1qnlr5lf"]

[ext_resource type="Script" path="res://combat/combatant/combatant_node.gd" id="1_jrp2a"]
[ext_resource type="PackedScene" uid="uid://bchj0l50h521m" path="res://combat/combatant/combat_ability_manager/combat_ability_manager.tscn" id="2_e7ifb"]
[ext_resource type="PackedScene" uid="uid://dynrtyfrxtgfj" path="res://combat/combatant/combat_resource_manager/combat_resource_manager.tscn" id="3_re4bv"]
[ext_resource type="PackedScene" uid="uid://ixn71vt5dyqf" path="res://combat/combatant/combat_effect_manager/combat_effect_manager.tscn" id="4_sgtgi"]

[node name="CombatantNode" type="Node2D"]
script = ExtResource("1_jrp2a")

[node name="CombatAbilityManager" parent="." instance=ExtResource("2_e7ifb")]
unique_name_in_owner = true

[node name="CombatResourceManager" parent="." instance=ExtResource("3_re4bv")]
unique_name_in_owner = true

[node name="CombatEffectManager" parent="." instance=ExtResource("4_sgtgi")]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="."]
